# MkBiB

./: .gitignore  Makefile.am  README.md  Trial.bib  autogen.sh  configure.ac  mkbib.desktop.in  mod_install.sh  setup.py
data/: Makefile.am  Makefile.in  menubar.ui  mkbib.desktop.in  org.example.mkbib.gschema.xml
data/icons/: Makefile.in
data/icons/hicolor/: Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.in
data/icons/hicolor/scalable/: Makefile.in
data/icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
data/ui/: Makefile.in  menubar.ui
mkbib/: __init__.py  __init__.py.in  __main__.py  cell.py  dialogue.py  filemanager.py  getdata.py  main.py  menu.py  preferences.py  pybib.py  view.py
src/: main.py  menu.py  menubar.ui  mkbib.py  pybib.py  view.py
