
AC_INIT([mkbib], [0.1],[],[mkbib])
AM_INIT_AUTOMAKE([1.9.6 dist-bzip2 subdir-objects])
AM_PATH_PYTHON([3.0])

GLIB_GSETTINGS
AC_CONFIG_FILES([Makefile 
                 data/Makefile
                 data/mkbib.desktop
                 data/icons/Makefile
                 data/icons/hicolor/Makefile
                 data/icons/hicolor/48x48/Makefile
                 data/icons/hicolor/48x48/apps/Makefile
                 data/icons/hicolor/scalable/Makefile
                 data/icons/hicolor/scalable/apps/Makefile
                 data/ui/Makefile
                 ])
AC_OUTPUT
